log/build_2024-12-27_21-29-39/mypkg/stderr.log
  File "/home/bun/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/listener.py", line 10
    7thvalue = msg.data * 7
     ^
SyntaxError: invalid syntax

